force-app/main/default/objects/Deposition_Session__c/Deposition_Session__c.object-meta.xml
<CustomObject>
    <label>Deposition Session</label>
    <nameField>
        <displayFormat>DEPO-{00000}</displayFormat>
        <label>Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deposition Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>