force-app/main/default/objects/Deposition_Session__c/fields/Deponent__c.field-meta.xml
<CustomField>
    <fullName>Deponent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deponent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Party__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Deponent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Party__c</referenceTo>
    <relationshipLabel>Deposition Sessions</relationshipLabel>
    <relationshipName>Deposition_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>