force-app/main/default/objects/Deposition_Session__c/fields/Deposition_Officer_Only__c.field-meta.xml
<CustomField>
    <fullName>Deposition_Officer_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deposition Officer Only</label>
    <type>Checkbox</type>
</CustomField>