force-app/main/default/objects/Deposition_Session__c/fields/Remote_Meeting_Link__c.field-meta.xml
<CustomField>
    <fullName>Remote_Meeting_Link__c</fullName>
    <label>Remote Meeting Link</label>
    <type>Url</type>
</CustomField>