force-app/main/default/objects/Deposition_Session__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Deposition Sessions</relationshipLabel>
    <relationshipName>Deposition_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>