force-app/main/default/objects/Deposition_Session__c/fields/Session_Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Session_Actual_Hours__c</fullName>
    <formula>(Session_End_Date_Time__c - Session_Start_Date_Time__c )/3600000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Actual Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>