force-app/main/default/objects/Deposition_Session__c/fields/Session_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_End_Date_Time__c</fullName>
    <label>Session End Date/Time</label>
    <type>DateTime</type>
</CustomField>