force-app/main/default/objects/Deposition_Session__c/fields/Session_Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Session_Planned_Hours__c</fullName>
    <label>Session Planned Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>