force-app/main/default/objects/Deposition_Session__c/fields/Session_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_Start_Date_Time__c</fullName>
    <label>Session Start Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>