force-app/main/default/objects/Deposition_Session__c/fields/Session_Status__c.field-meta.xml
<CustomField>
    <fullName>Session_Status__c</fullName>
    <label>Session Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Continued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>