force-app/main/default/objects/Deposition_Session__c/fields/WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder__c</fullName>
    <label>WorkOrder</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Deposition Sessions</relationshipLabel>
    <relationshipName>Deposition_Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>